--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="E_l9mRxXGbxzlmlegZIAnYAeMSckeIQpluDer1gbF4U" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://humsteri.github.io/Aapo_Kojo/index.html" />
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="Aapo Kojo's portfolio. This page contains projects that I have made or have been part of.">
     <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, unity programmer, c#, unreal engine, Pogo game, kamk, groundfolk, Kajaani">
@@ -35,7 +36,8 @@
         <p>You've stumbled upon the portfolio of Aapo Kojo (game programmer, hard worker, video game and movie enthusiast). Really big fan of horror and marvel movies. 
         
         <p>I'm studying game programming at Kajaani University of Applied Sciences (KAMK) and currently I'm on my third year.
-             I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence".</p>
+             I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence". 
+             I really like programming and especially when I get to solve problems. I like to join game jams on my free time and do other side projects. </p>
 
         <img src="Portrait.png" alt="Aapo Kojo Portrait" width="400" height="150">
         <h2>Little bit about myself </h2>
