--- a/projects_ue5.html
+++ b/projects_ue5.html
@@ -41,6 +41,10 @@
                 <li>Tasks: Multiplayer matchmaking, deathmatch gamemode</li>
             </ul>
         </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>Deathmatch gamemode took a lot of time as this was first multiplayer project I made with Unreal Engine. I'm really proud of how it turned out.</li>
+        </ul>
         <h2>Matchmaking </h2>
         <ul>
             <li>Steam integration: Game detects and connects to steam on startup</li>
