--- a/resume.html
+++ b/resume.html
@@ -44,8 +44,10 @@
         <h2>As a person </h2>
         <ul>
             <li>Strong team worker</li>
+            <li>Able to work in small or big teams</li>
             <li>Enthusiastic to learn new things</li>
             <li>Ready to challenge myself</li>
+            <li>Good language skills</li>
         </ul>
         <h2>Some knowledge </h2>
         <ul>
