--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,10 @@
                 <li>Tasks: Inventory, items, dialogue, crafting and save systems</li>
             </ul>
         </div>
-        
+        <h2>Highlights</h2>
+        <ul>
+            <li>I got grid-based inventory working that could be navigated with controller or mouse and keyboard. Saving and loading also work nicely. </li>
+        </ul>
         <h2>Inventory </h2>
         <ul>
             <li>Grid-based Layout: Implemented a Terraria and Minecraft-like grid-based inventory system for intuitive item management</li>
@@ -88,6 +91,10 @@
                 <li>Tasks: Multiplayer matchmaking, deathmatch gamemode</li>
             </ul>
         </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>Deathmatch gamemode took a lot of time as this was first multiplayer project I made with Unreal Engine. I'm really proud of how it turned out.</li>
+        </ul>
         <h2>Matchmaking </h2>
         <ul>
             <li>Steam integration: Game detects and connects to steam on startup</li>
@@ -116,6 +123,10 @@
                 <li>Tasks: Input detection, player, level systems</li>
             </ul>
         </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>First mobile project and we even got it published to Google Play! I'm proud of the input detection system I made because it turned out responsive. </li>
+        </ul>
         <h2>Input detection </h2>
         <ul>
             <li>Different inputs: Game detects swipes up, down and taps left and right on both sides of player</li>
@@ -157,6 +168,10 @@
                 <li>Special mention: Assembly Summer 2023 Development Competition 5th place</li>
             </ul>
         </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>First project where I learned to use JSON. </li>
+        </ul>
         <h2>Menus</h2>
         <ul>
             <li>UI toolkit: Modular menus made with UI toolkit</li>
@@ -193,6 +208,10 @@
                 <li>Tasks: Menus, enemy AI, inventory</li>
             </ul>
         </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>First project where I learned about Enemy AI.</li>
+        </ul>
         <h2>Menus</h2>
         <ul>
             <li>Basic start and pause menus</li>
