--- a/sideprojects.html
+++ b/sideprojects.html
@@ -32,6 +32,10 @@
                 <li>Tasks: Inventory replication</li>
             </ul>
         </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>Really proud of how I got the chest to replicate to all of the other players. You can see in real time if items swap places or something is taken from it.</li>
+        </ul>
         <h2>Inventory</h2>
         <ul>
             <li>Host game and join with unity netcode</li>
@@ -39,6 +43,30 @@
             <li>Dropping or picking up items replicates to others</li>
             <li>Bank where everyone can put items which replicates</li>
             <li>Holding items in hand is replicated</li>
+        </ul>
+    </div>
+    <div class="content">
+        <h2>Raspberry Pi slideshow program</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Programmer</li>
+                <li>Team Size: 1</li>
+                <li>Time frame: 2 weeks</li>
+                <li>Engine: Raspberry Pi, Linux</li>
+                <li>Tasks: Slideshow program</li>
+            </ul>
+        </div>
+        <h2>Info and highlights</h2>
+        <ul>
+            <li>Summer 2024 we got office space where we worked on our summer project. In return we needed to make a python slideshow project for Raspberry Pi which I made.</li>
+            <li>I learned a lot about python, linux, venv and how to setup program to Raspberry Pi. </li>
+        </ul>
+        <h2>Slideshow</h2>
+        <ul>
+            <li>Program detects if USB-stick has been connected to the Raspberry </li>
+            <li>Takes the pictures or videos from USB-stick and displays them on screen on a loop</a></li>
+            <li>Program starts on boot</li>
         </ul>
     </div>
     <div class="content">
@@ -90,6 +118,26 @@
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2352184?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/madgoat">MadGoat by retvis, Masaboy, Tabbe, Humsteri</a></iframe>
     </div>
+    </div>
+    <div class="content">
+        <h2>Moving Duck</h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Programmer, Engineer</li>
+                <li>Team Size: 9</li>
+                <li>Time frame: Few months</li>
+                <li>Engine: Raspberry Pi</li>
+                <li>Tasks: Controller, Programming</li>
+            </ul>
+        </div>
+        <img src="Duck.png" alt="The Duck" width="600" height="300">
+        <h2>Info</h2>
+        <ul>
+            <li>This was first bigger project in school and we wanted to make a duck which you could move in water with a controller. </li>
+            <li>I made the controller with my friend and some programming with python.</li>
+        </ul>
+        <img src="Duck2.jpg" alt="Making of the duck" width="600" height="300">
     </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
