--- a/sideprojects.html
+++ b/sideprojects.html
@@ -137,7 +137,7 @@
             <li>This was first bigger project in school and we wanted to make a duck which you could move in water with a controller. </li>
             <li>I made the controller with my friend and some programming with python.</li>
         </ul>
-        <img src="Duck2.jpg" alt="Making of the duck" width="600" height="300">
+        <img src="Duck2.png" alt="Making of the duck" width="600" height="300">
     </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
