--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="E_l9mRxXGbxzlmlegZIAnYAeMSckeIQpluDer1gbF4U" />
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://humsteri.github.io/Aapo_Kojo/index.html" />
+    <link rel="canonical" href="https://humsteri.github.io/Aapo_Kojo/" />
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="Aapo Kojo's portfolio. This page contains projects that I have made or have been part of.">
     <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, unity programmer, c#, unreal engine, Pogo game, kamk, groundfolk, Kajaani">
