--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence". 
              I really like programming and especially when I get to solve problems. I like to join game jams on my free time and do other side projects. </p>
 
-        <img src="Portrait.png" alt="Aapo Kojo Portrait" width="400" height="150">
+        <img src="PortraitV2.png" alt="Aapo Kojo Portrait" width="400" height="150">
         <h2>Little bit about myself </h2>
         <ul>
             <li>I'm 22 years old and I'm from Finland</li>
