Added 2024 jam project

--- a/sideprojects.html
+++ b/sideprojects.html
@@ -21,6 +21,41 @@
         </nav>
     </header>
     <div class="content">
+        <h2>Blind In Tuonela</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 2</li>
+                <li>Time frame: 48h, Game Jam</li>
+                <li>Engine: Unity, 3D, Multiplayer</li>
+                <li>Tasks: Multiplayer, replication, recast, object pooling, enemy</li>
+            </ul>
+        </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>During this jam I learned more about making multiplayer and replicating things to others. I also looked into pooling objects.</li>
+        </ul>
+        <h2>Multiplayer</h2>
+        <ul>
+            <li>Host game and join with Mirror and FizzySteamworks</li>
+            <li>Replicate placed objects to other players</a></li>
+            <li>Replicate player movement and enemy movement</li>
+        </ul>
+        <h2>Enemy</h2>
+        <ul>
+            <li>Different states: chasing, attacking, hiding</li>
+            <li>After attacking generate points and choose where there is no line of sight</a></li>
+        </ul>
+        <img src="BlindInTuonelaEnemy.gif" alt="Blind In Tuonela Enemy GIF" width="600" height="300">
+        <h2>Dot spawning</h2>
+        <ul>
+            <li>Object pooling: Spawn the objects at the start and take inactive ones. Spawn more if need be</li>
+            <li>Shoot lot of raycasts from player and pick suitable places</a></li>
+        </ul>
+        <img src="BlindInTuonelaDots.gif" alt="Blind In Tuonela dots GIF" width="600" height="300">
+    </div>
+    <div class="content">
         <h2>Multiplayer inventory</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
