Fix my bad grammar

--- a/sideprojects.html
+++ b/sideprojects.html
@@ -29,7 +29,7 @@
                 <li>Team Size: 2</li>
                 <li>Time frame: 48h, Game Jam</li>
                 <li>Engine: Unity, 3D, Multiplayer</li>
-                <li>Tasks: Multiplayer, replication, recast, object pooling, enemy</li>
+                <li>Tasks: Multiplayer, replication, raycasting, object pooling, enemy</li>
             </ul>
         </div>
         <h2>Highlights</h2>
