--- a/sideprojects.html
+++ b/sideprojects.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <div class="content">
-        <h2>Blind In Tuonela</a></h2>
+        <h2><a href="https://humsteri.itch.io/blind-in-tuonela">Blind In Tuonela</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
             <ul>
@@ -32,9 +32,10 @@
                 <li>Tasks: Multiplayer, replication, raycasting, object pooling, enemy</li>
             </ul>
         </div>
-        <h2>Highlights</h2>
+        <h2>Highlights and Info</h2>
         <ul>
             <li>During this jam I learned more about making multiplayer and replicating things to others. I also looked into pooling objects.</li>
+            <li>We had two programmers so art was going to be a problem. We chose nice programmer art way and the only way to see in the game is to spawn dots.</li>
         </ul>
         <h2>Multiplayer</h2>
         <ul>
@@ -54,6 +55,9 @@
             <li>Shoot lot of raycasts from player and pick suitable places</a></li>
         </ul>
         <img src="BlindInTuonelaDots.gif" alt="Blind In Tuonela dots GIF" width="600" height="300">
+        <div class="embed-container">
+        <iframe frameborder="0" src="https://itch.io/embed/3099129?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://humsteri.itch.io/blind-in-tuonela">Blind In Tuonela by Humsteri</a></iframe>
+        </div>
     </div>
     <div class="content">
         <h2>Multiplayer inventory</a></h2>
