Added new project and cleaning the folders

--- a/projects_ue5.html
+++ b/projects_ue5.html
@@ -20,7 +20,6 @@
             <a href="contacts.html">Contacts and links</a>
         </nav>
     </header>
-
     <div class="content">
         <header>
             <h1>Projects</h1>
@@ -30,6 +29,51 @@
                 <a href="projects_unity.html">Unity</a>
             </nav>
         </header>
+    </div>
+    <div class="content">
+        <h2><a href=>Hailey Seitan</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 8</li>
+                <li>Time frame: 4 months</li>
+                <li>Engine: Unreal Engine 5, 3D</li>
+                <li>Tasks: Enemy AI and behaviour, menus, other</li>
+            </ul>
+        </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>First project where I took a deeper dive into making enemy AI and it turned out nicely. Learned behaviour trees, blackboard, EQS, AI perception, interfaces and adding animations.</li>
+        </ul>
+        <h2>Enemy AI and behaviour </h2>
+        <ul>
+            <li>Three different enemy types: melee, projectile and arc projectile</li>
+            <li>Damage system with health bar for enemies</li>
+            <li>Hit reactions and damage flash</li>
+            <li>Melee enemy: Follows player all the time attacking if close enough. Jumps over obstacles.</li>
+            <img src="Gifs/CarrotEnemy.gif" alt="Carrot enemey GIF" width="600" height="300">
+            <li>Projectile enemy: Looks for place to shoot with EQS and shoots projectiles straight to player. Uses nav link to jump to different platforms.</li>
+            <img src="Gifs/TomatoEnemy.gif" alt="Carrot enemey GIF" width="600" height="300">
+            <li>Arc projectile enemy: Looks for place to shoot with EQS and shoots projectiles in an arc to player. Uses nav link to jump to different platforms.</li>
+            <img src="Gifs/PeaEnemy.gif" alt="Carrot enemey GIF" width="600" height="300">
+        </ul>
+        <h2>Menus </h2>
+        <ul>
+            <li>Main menu and pause menu with gameplay-, graphic-, and audio settings.</li>
+            <li>Saving and loading</li>
+        </ul>
+        <h2>Other </h2>
+        <ul>
+            <li>Placed a lot of sounds to correct places.</li>
+            <li>Info text for guiding player</li>
+            <li>Dissolve effect</li>
+        </ul>
+        <div class="embed-container">
+        </div>
+    </div>
+    
+    <div class="content">
         <h2><a href="https://juhot.itch.io/pogo-blast">Pogo Blast</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
