--- a/projects_unity.html
+++ b/projects_unity.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="This page contains projects that I have made or have been part of.">
     <title> Aapo Kojo </title>
-    <link rel="icon" href="sly.png" type="image/x-icon">
+    <link rel="icon" href="Pictures/sly.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -30,6 +30,8 @@
                 <a href="projects_unity.html">Unity</a>
             </nav>
         </header>
+    </div>
+    <div class="content">
         <h2><a href="https://retvis.itch.io/groundfolk">Groundfolk</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
@@ -52,27 +54,27 @@
             <li>Stack Splitting: Split item stacks for flexible inventory management</li>
             <li>Deposit Buttons: Mass move items from inventory to container or vise versa</li>
         </ul>
-        <img src="Chest.gif" alt="Chest GIF" width="600" height="300">
+        <img src="Gifs/Chest.gif" alt="Chest GIF" width="600" height="300">
         <h2>Items </h2>
         <ul>
             <li>Item Management: System that allows players to drop single items or entire stacks easily</li>
             <li>Scriptable Objects: Easy addition of new items, enhancing scalability.</li>
             <li>Event Integration: Event handling for items to make different consumables</li>
         </ul>
-        <img src="Items.gif" alt="Items GIF" width="600" height="300">
+        <img src="Gifs/Items.gif" alt="Items GIF" width="600" height="300">
         <h2>Crafting </h2>
         <ul>
             <li>Expandable Crafting System: System that can be easily expanded using scriptable objects</li>
             <li>New Item Integration: Facilitated the addition of new items with scriptable objects for crafting recipes</li>
         </ul>
-        <img src="Crafting.gif" alt="Crafting GIF" width="600" height="300">
+        <img src="Gifs/Crafting.gif" alt="Crafting GIF" width="600" height="300">
         <h2>Dialogue </h2>
         <ul>
             <li>Dialogue unlocking: Players can unlock additional dialogue options by engaging in conversations with characters</li>
             <li>Dialogue Activation: Certain dialogue options may require specific items in the player’s inventory.</li>
             <li>Gradual Text Display: Implemented a letter-by-letter text appearance</li>
         </ul>
-        <img src="Dialogue.gif" alt="Dialogue GIF" width="600" height="300">
+        <img src="Gifs/Dialogue.gif" alt="Dialogue GIF" width="600" height="300">
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2837437?linkback=true&amp;bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://retvis.itch.io/groundfolk">Groundfolk by retvis, Humsteri, Masaboy, Joukkari</a></iframe>
         </div>
@@ -98,14 +100,14 @@
         <ul>
             <li>Different inputs: Game detects swipes up, down and taps left and right on both sides of player</li>
         </ul>
-        <img src="InputDetection.gif" alt="Input GIF" width="600" height="300">
+        <img src="Gifs/InputDetection.gif" alt="Input GIF" width="600" height="300">
         <h2>Level systems </h2>
         <ul>
             <li>Rewards: Detects if different correct or incorrect inputs were made and gives rewards accordingly</li>
             <li>Repeating background: Seamlessly starts repeating background</li>
             <li>Replay: Able to replay same level, go to next one or revive with one life</li>
         </ul>
-        <img src="LevelRewardSystem.gif" alt="Reward GIF" width="600" height="300">
+        <img src="Gifs/LevelRewardSystem.gif" alt="Reward GIF" width="600" height="300">
         <h2>Player </h2>
         <ul>
             <li>Enemy detection: Detects enemies that come close</li>
@@ -144,19 +146,19 @@
             <li>Settings: Volume, music, graphic settings</li>
             <li>Saving: Chosen settings get saved and loaded</li>
         </ul>
-        <img src="MainMenuSunescape.png" alt="Sunescape main menu" width="600" height="300">
+        <img src="Pictures/MainMenuSunescape.png" alt="Sunescape main menu" width="600" height="300">
         <h2>Enemy AI </h2>
         <ul>
             <li>Melee enemy: Enemy that comes close and tries to slash the player</li>
             <li>Crawler: Enemy that follows player and tries to plunge and topple the player</li>
             <li>Exploding enemy: Enemy that tries to come close to player and explode</li>
         </ul>
-        <img src="SunescapeEnemies.gif" alt="Sunescape enemies" width="600" height="300">
+        <img src="Gifs/SunescapeEnemies.gif" alt="Sunescape enemies" width="600" height="300">
         <h2>Menu camera </h2>
         <ul>
             <li>Camera: Level selection camera that can move left and right</li>
         </ul>
-        <img src="SunescapeMap.gif" alt="Sunescape map" width="600" height="300">
+        <img src="Gifs/SunescapeMap.gif" alt="Sunescape map" width="600" height="300">
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/2200931?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://rockatana.itch.io/sunescape">Sunescape by Rockatana, Masaboy, retvis, Joukkari, Humsteri</a></iframe>
         </div>
