--- a/sideprojects.html
+++ b/sideprojects.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Aapo Kojo">
     <meta name="description" content="This page contains projects that I have made or have been part of.">
     <title> Aapo Kojo </title>
-    <link rel="icon" href="sly.png" type="image/x-icon">
+    <link rel="icon" href="Pictures/sly.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -48,13 +48,13 @@
             <li>Different states: chasing, attacking, hiding</li>
             <li>After attacking generate points and choose where there is no line of sight</a></li>
         </ul>
-        <img src="BlindInTuonelaEnemy.gif" alt="Blind In Tuonela Enemy GIF" width="600" height="300">
+        <img src="Gifs/BlindInTuonelaEnemy.gif" alt="Blind In Tuonela Enemy GIF" width="600" height="300">
         <h2>Dot spawning</h2>
         <ul>
             <li>Object pooling: Spawn the objects at the start and take inactive ones. Spawn more if need be</li>
             <li>Shoot lot of raycasts from player and pick suitable places</a></li>
         </ul>
-        <img src="BlindInTuonelaDots.gif" alt="Blind In Tuonela dots GIF" width="600" height="300">
+        <img src="Gifs/BlindInTuonelaDots.gif" alt="Blind In Tuonela dots GIF" width="600" height="300">
         <div class="embed-container">
         <iframe frameborder="0" src="https://itch.io/embed/3099129?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://humsteri.itch.io/blind-in-tuonela">Blind In Tuonela by Humsteri</a></iframe>
         </div>
@@ -170,13 +170,13 @@
                 <li>Tasks: Controller, Programming</li>
             </ul>
         </div>
-        <img src="Duck.png" alt="The Duck" width="600" height="300">
+        <img src="Pictures/Duck.png" alt="The Duck" width="600" height="300">
         <h2>Info</h2>
         <ul>
             <li>This was first bigger project in school and we wanted to make a duck which you could move in water with a controller. </li>
             <li>I made the controller with my friend and some programming with python.</li>
         </ul>
-        <img src="Duck2.png" alt="Making of the duck" width="600" height="300">
+        <img src="Pictures/Duck2.png" alt="Making of the duck" width="600" height="300">
     </div>
     <footer>
         <p>&copy; 2024 Aapo Kojo. All rights reserved.</p>
