--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Aapo Kojo's portfolio. This page contains projects that I have made or have been part of.">
     <meta name="keywords" content="Aapo Kojo,Kojo Aapo, Portfolio, Game programmer, programmer, unity programmer, c#, unreal engine, Pogo game, kamk, groundfolk, Kajaani">
     <title>Aapo Kojo - Game Programmer Portfolio</title>
-    <link rel="icon" href="sly.png" type="image/x-icon">
+    <link rel="icon" href="Pictures/sly.png" type="image/x-icon">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DM8BJ645S1"></script>
     <script>
@@ -39,7 +39,7 @@
              I'm interested in enemy AI in games and I'm writing my thesis about "Adaptive and reactive enemy artificial intelligence". 
              I really like programming and especially when I get to solve problems. I like to join game jams on my free time and do other side projects. </p>
 
-        <img src="PortraitV2.png" alt="Aapo Kojo Portrait" width="400" height="150">
+        <img src="Pictures/PortraitV2.png" alt="Aapo Kojo Portrait" width="400" height="150">
         <h2>Little bit about myself </h2>
         <ul>
             <li>I'm 22 years old and I'm from Finland</li>
