--- a/projects_ue5.html
+++ b/projects_ue5.html
@@ -31,7 +31,7 @@
         </header>
     </div>
     <div class="content">
-        <h2><a href=>Hailey Seitan</a></h2>
+        <h2><a href="https://sarcaster.itch.io/hailey-seitan">Hailey Seitan</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
             <ul>
@@ -39,7 +39,7 @@
                 <li>Team Size: 8</li>
                 <li>Time frame: 4 months</li>
                 <li>Engine: Unreal Engine 5, 3D</li>
-                <li>Tasks: Enemy AI and behaviour, menus, other</li>
+                <li>Tasks: Enemy AI and behavior, menus, other</li>
             </ul>
         </div>
         <h2>Highlights</h2>
@@ -70,6 +70,7 @@
             <li>Dissolve effect</li>
         </ul>
         <div class="embed-container">
+            <iframe frameborder="0" src="https://itch.io/embed/3126879?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/hailey-seitan">Hailey Seitan by Sarcaster, retvis, Stolan27, Masaboy, Humsteri</a></iframe>
         </div>
     </div>
     
