Added ggj project

--- a/sideprojects.html
+++ b/sideprojects.html
@@ -21,6 +21,36 @@
         </nav>
     </header>
     <div class="content">
+        <h2><a href="https://humsteri.itch.io/me-when-bubbles">Me When Bubbles</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 2</li>
+                <li>Time frame: 48h, Game Jam</li>
+                <li>Engine: Unity, 3D</li>
+                <li>Tasks: Spell system, enemies, liquid shader</li>
+            </ul>
+        </div>
+        <h2>Highlights and Info</h2>
+        <ul>
+            <li>First time touching shaders in Unity and created nice liquid shader.</li>
+        </ul>
+        <h2>Spell system</h2>
+        <ul>
+            <li>Picks random spell from four different spells</li>
+            <li>Knocks enemis around with physics</a></li>
+        </ul>
+        <h2>Enemy</h2>
+        <ul>
+            <li>Basic enemy that chases and tries to attack the player</li>
+        </ul>
+        <img src="Gifs/MeWhenBubbles.gif" alt="Me When Bubbles GIF" width="600" height="300">
+        <div class="embed-container">
+        <iframe frameborder="0" src="https://itch.io/embed/3272285?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://humsteri.itch.io/me-when-bubbles">Me When Bubbles by Humsteri, Tabbe</a></iframe>
+        </div>
+    </div>
+    <div class="content">
         <h2><a href="https://humsteri.itch.io/blind-in-tuonela">Blind In Tuonela</a></h2>
         <div class="info-box">
             <h3>Project Info</h3>
