Some resume updates

--- a/resume.html
+++ b/resume.html
@@ -24,19 +24,23 @@
     <div class="content">
         <h2>Engines </h2>
         <ul>
-            <li>Unity (2D, 3D, Multiplayer)</li>
+            <li>Unity (2D, 3D, Multiplayer(NGO, Mirror, FizzySteamworks))</li>
             <li>Unreal Engine 5 (3D, Multiplayer)</li>
+            <li>Godot 4.3 (3D)</li>
         </ul>
         <h2>Languages </h2>
         <ul>
             <li>C#</li>
             <li>C++</li>
             <li>Blueprints</li>
+            <li>GDScript</li>
             <li>Html</li>
         </ul>
         <h2>Project management </h2>
         <ul>
-            <li>Git</li>
+            <li>GitHub</li>
+            <li>GitHub Desktop</li>
+            <li>Fork Dev</li>
             <li>Hacknplan</li>
             <li>Trello</li>
             <li>Discord</li>
@@ -53,6 +57,7 @@
         <ul>
             <li>Blender</li>
             <li>Cmake</li>
+            <li>Python</li>
         </ul>
     </div>
 
