Added new project

--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     <title> Aapo Kojo </title>
     <link rel="icon" href="Pictures/sly.png" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <h1>Aapo Kojo</h1>
@@ -29,6 +30,48 @@
                 <a href="projects_unity.html">Unity</a>
             </nav>
         </header>
+    </div>
+    <div class="content">
+        <h2><a href="https://sarcaster.itch.io/hungry-turtles">Hungry Turtles</a></h2>
+        <div class="info-box">
+            <h3>Project Info</h3>
+            <ul>
+                <li>Role: Gameplay Programmer</li>
+                <li>Team Size: 8</li>
+                <li>Time frame: 2 months</li>
+                <li>Engine: Unity, 3D, Multiplayer, WebGL</li>
+                <li>Tasks: Lobby, game hosting, game flow, audio manager, other smaller multiplayer stuff</li>
+            </ul>
+        </div>
+        <h2>Highlights</h2>
+        <ul>
+            <li>Multiplayer game that can be played in the browser! Lobby also took a lot of time but in the end it payed off.</li>
+        </ul>
+        <h2>Lobby and hosting</h2>
+        <ul>
+            <li>Lobby joining and creation. Name, size and publicity ccan be changed </li>
+            <li>Character selection</li>
+            <li>Name changing</li>
+            <li>Host migration</li>
+            <li>Info system</li>
+            <li>Game hosting with Unity's relay system</li>
+        </ul>
+        <img src="Gifs/HungryTurtlesLobby.gif" alt="Hungry Turtles Lobby" width="600" height="300">
+        <h2>Audio manager </h2>
+        <ul>
+            <li>Play wanted sounds at wanted location</li>
+            <li>If wanted the audio gets replicated to others or only plays locally</li>
+        </ul>
+        <h2>Time manager </h2>
+        <ul>
+            <li>Game time runs on the server and replicates to all the clients</li>
+            <li>Wanted things happen at game start and end</li>
+        </ul>
+        <img src="Gifs/HungryTurtlesGameplay.gif" alt="Hungry Turtles Gameplay" width="600" height="300">
+        <div class="embed-container">
+            <iframe frameborder="0" src="https://itch.io/embed/3357670?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/hungry-turtles">Hungry Turtles by Sarcaster, retvis, Stolan27, Humsteri, Masaboy, Nipetsu</a></iframe>
+        </div>
+        <p></p>
     </div>
     <div class="content">
         <h2><a href="https://sarcaster.itch.io/hailey-seitan">Hailey Seitan</a></h2>
@@ -72,6 +115,12 @@
         <div class="embed-container">
             <iframe frameborder="0" src="https://itch.io/embed/3126879?bg_color=1e1e1e&amp;fg_color=ffffff" width="552" height="167"><a href="https://sarcaster.itch.io/hailey-seitan">Hailey Seitan by Sarcaster, retvis, Stolan27, Masaboy, Humsteri</a></iframe>
         </div>
+        <!--</div>
+        <button type="button" class="collapsible">Show code</button>
+        <div class="collapsibleContent">
+        <p>Code thi blaa blaa blaa</p>
+        <img src="Pictures/PortraitV2.png" alt="Aapo Kojo Portrait" width="600" height="300">
+        </div>-->
     </div>
     
     <div class="content">
@@ -279,3 +328,19 @@
     </footer>
 </body>
 </html>
+<!--<script>
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
+    
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.maxHeight){
+          content.style.maxHeight = null;
+        } else {
+          content.style.maxHeight = content.scrollHeight + "px";
+        }
+      });
+    }
+</script>-->
